--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="//fonts.googleapis.com/css?family=Roboto:400,900,300,100,500" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </head>
