--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <main class="container">
     <div class="row">
       <!--<img class="img-responsive center-block" src="images/banner.png" alt="Portfolio Banner Image"> -->
-      <div class="col-md-12 text">I am an experienced IT/Software developer with more than 8 years of practical knowledge of software design, development, testing and maintenance. Experienced working with developing Web/Desktop applications, providing IT Support, performing Network administration tasks and managing cross functional teams and projects. I perform effectively both individually and in teams and have excellent ability to provide simple yet effective solutions for complex analytical problems and robust software products using Agile development. </div> 
+      <div class="col-md-12 text">An experienced software/web developer with practical knowledge of object-oriented software design, problem solving, implementation and maintenance. 5+ years’ experience of full-stack development. Knowledge of Git-hub, TDD and Agile Development. I have a proven track record in delivering good quality robust software to deadline. Approachable, well presented and able to perform effectively both individually and in teams. Capable of establishing good working relationships with team members at all levels. A quick learner who can absorb new ideas and is experienced in delivering the knowledge further, efficiently and effectively. </div> 
  
      <div class="col-md-12 text"> Worked for more than 4 years at Leading position managing projects, transforming and optimizing business processes, effective utilization of budget/resources and motivating and inspiring teams to work effectively and efficiently to meet deadlines and KPIs.  
      </div>
