--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="//fonts.googleapis.com/css?family=Roboto:400,900,300,100,500" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <script src="js/jquery.js"></script>
 	<script src="js/script.js"></script>
